[gd_scene load_steps=5 format=2]

[ext_resource path="res://Box/Box.gd" type="Script" id=1]
[ext_resource path="res://Box/Buttons.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Box" type="Node2D"]
z_index = 100
z_as_relative = false
script = ExtResource( 1 )

[node name="Buttons" type="Control" parent="."]
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Copy" type="Button" parent="Buttons"]
margin_right = 12.0
margin_bottom = 20.0
text = "Cop"

[node name="Kill" type="Button" parent="Buttons"]
margin_left = 8.0
margin_right = 20.0
margin_bottom = 20.0
text = "Kil"

[node name="Rotate" type="Button" parent="Buttons"]
margin_right = 12.0
margin_bottom = 20.0
text = "Rot"

[node name="Remove" type="Button" parent="Buttons"]
margin_right = 12.0
margin_bottom = 20.0
text = "Rem"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Contents" type="Node2D" parent="."]
[connection signal="pressed" from="Buttons/Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="Buttons/Kill" to="." method="kill"]
[connection signal="pressed" from="Buttons/Rotate" to="." method="rot"]
[connection signal="pressed" from="Buttons/Remove" to="." method="remove"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
